--- a/src/components/Medicine.css
+++ b/src/components/Medicine.css
@@ -13,6 +13,8 @@
     width: 100%;
     height: 50%;
     object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 15px;
 }
 
 .medicine-details {
