--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,10 @@
 /* Navbar.css */
 .navbar {
-    background-color: #2f2626; /* Default background */
-    overflow: visible; /* Allow children to overflow */
-    position: fixed; /* Fix position at the top */
-    top: 0; /* Align to the top */
-    width: 100%; /* Full width */
+    background-color: #2f2626;
+    overflow: visible;
+    position: fixed;
+    top: 0;
+    width: 100%;
     margin: 0;
 }
 
@@ -15,120 +15,118 @@
 }
 
 .navbar a {
-    float: left; /* Float links to the left */
-    display: block; /* Display links as block elements */
-    color: white; /* White text color */
-    text-align: center; /* Center-align text */
-    padding: 14px 20px; /* Padding */
-    text-decoration: none; /* Remove underline */
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
     margin: 1em 1em;
 }
 
 .navbar a:hover {
-    background-color: #4c3c3c; /* Hover background */
-    color: black; /* Black text color on hover */
+    background-color: #4c3c3c;
+    color: black;
 }
 
 .navbar a.active {
-    background-color: #5f4c4c; /* Active background */
-    color: white; /* White text color for active link */
+    background-color: #5f4c4c;
+    color: white;
 }
 
 .dropdown-item {
-    position: relative; /* Position relative for dropdown */
-    display: inline-block; /* Display button as inline-block element */
-    color: white; /* White text color */
-    text-align: center; /* Center-align text */
-    padding: 0; /* Padding */
-    text-decoration: none; /* Remove underline */
-    background-color: #2f2626; /* Default background */
-    border: none; /* Remove border */
-    cursor: pointer; /* Pointer cursor on hover */
-    width: 90%; /* Ensure dropdown item covers full width */
-    margin: 0; /* Ensure no margin */
-    line-height: 1.5; /* Match line height */
+    position: relative;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 0;
+    text-decoration: none;
+    background-color: #2f2626;
+    border: none;
+    cursor: pointer;
+    width: 90%;
+    margin: 0;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    line-height: 1.5;
 }
 
 .dropdown-item:hover {
-    background-color: #4c3c3c; /* Hover background */
-    color: black; /* Black text color on hover */
+    background-color: #4c3c3c;
 }
 
 .dropdown-item.active {
-    background-color: #5f4c4c; /* Active background */
-    color: white; /* White text color for active button */
+    background-color: #5f4c4c;
+    color: white;
 }
 
 .profile {
-    float: right; /* Float button to the right */
-    display: block; /* Use flexbox for layout */
-    align-items: center; /* Center items vertically */
-    color: white; /* White text color */
-    text-align: center; /* Center-align text */
-    padding: 14px 20px; /* Padding */
-    text-decoration: none; /* Remove underline */
-    background-color: #2f2626; /* Default background */
-    border: none; /* Remove border */
-    cursor: pointer; /* Pointer cursor on hover */
-    border-radius: 10%; /* Rounded corners */
-    margin-top: 0.5em; /* Add margin to space out button */ 
-    margin-bottom: 0.5em; /* Add margin to space out button */ 
-    margin-right: 2em; /* Add margin to space out button */ 
-    position: relative; /* Position relative for dropdown */
-    z-index: 1; /* Ensure profile is above navbar */
+    float: right;
+    display: block;
+    align-items: center;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    background-color: #2f2626;
+    border: none;
+    cursor: pointer;
+    border-radius: 10%;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-right: 2em;
+    position: relative;
+    z-index: 1;
 }
 
 .profile img {
-    width: 2em; /* Set image width */
-    height: 2em; /* Set image height */
-    border-radius: 50%; /* Ensure image is circular */
-    margin-left: 10px; /* Add margin to the left of the image */
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    margin-left: 10px;
 }
 
 .user-welcome {
     margin: 0.5em;
 }
 
-
 .dropdown-menu {
-    display: none; /* Hide dropdown by default */
-    position: absolute; /* Position dropdown absolutely */
-    background-color: #2f2626; /* Dropdown background */
-    min-width: 9em; /* Minimum width */
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); /* Box shadow */
-    right: 0; /* Align dropdown to the right */
-    z-index: 2; /* Ensure dropdown items stack properly */
-    margin-top: 1em; /* Add margin to space out dropdown items */
-    border: 1px solid #4c3c3c; /* Smooth border with appropriate color */
-    border-radius: 8px; /* Rounded corners */
-    align-items: flex-start; /* Align items to the start */
+    display: none;
+    position: absolute;
+    background-color: #2f2626;
+    min-width: 9em;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    right: 0;
+    z-index: 2;
+    margin-top: 0.9em;
+    border: 1px solid #4c3c3c;
+    align-items: flex-start;
 }
 
 .profile:hover .dropdown-menu {
-    display: block; /* Show dropdown on hover */
+    display: block;
 }
 
 .dropdown-menu a {
-    color: white; /* White text color */
-    padding: 12px 16px; /* Padding */
-    text-decoration: none; /* Remove underline */
-    text-align: left; /* Left-align text */
-    border-bottom: 1px solid #4c3c3c; /* Border between items */
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: left;
+    border-bottom: 1px solid #4c3c3c;
 }
 
-
 .dropdown-menu a:hover {
-    background-color: #4c3c3c; /* Hover background */
-    color: black; /* Black text color on hover */
-    background-color: #4c3c3c; /* Hover background */
+    background-color: #4c3c3c;
+    color: black;
+    background-color: #4c3c3c;
 }
 
 .profile:hover {
-    background-color: #4c3c3c; /* Hover background */
-    color: black; /* Black text color on hover */
+    background-color: #4c3c3c;
+    color: black;
 }
 
 .profile.active {
-    background-color: #5f4c4c; /* Active background */
-    color: white; /* White text color for active button */
+    background-color: #5f4c4c;
+    color: white;
 }
