--- a/src/components/Prescriptions.css
+++ b/src/components/Prescriptions.css
@@ -17,9 +17,9 @@
     text-align: center;
 }
 
-.medicine-image {
-    width: 70px;
-    height: 70px;
+.medicine-image-pres {
+    width: 100%;
+    height: 30%;
     object-fit: cover;
     border-radius: 50%;
     margin-bottom: 15px;
